--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         top: 90%;
         right: 2rem;
         transform: translateY(-50%);
-        font-size: 0.5rem;
+        font-size: 1.2rem;
         background-color: rgba(0, 155, 255, 0.5);
-        padding: 0.5rem;
-        border-radius: 8px;
+        padding: 0.2rem;
+        border-radius: 6px;
         width: 180px;
         text-align: center;
         overflow: hidden;
@@ -194,7 +194,7 @@
 
       <iframe
         src="./secciones/tecnologias/tecnologias.html"
-        class="doble__pantalla"
+        class=""
         allowfullscreen
         title="tecnologias"
         id="tecnologias"
@@ -202,7 +202,7 @@
 
       <iframe
         src="secciones/habilidades/habilidades.html"
-        class="texto__final__animado"
+        class=""
         allowfullscreen
         id="habilidades"
         title="habilidades"
@@ -228,7 +228,7 @@
       <iframe
         src="secciones/contacto/contacto.html"
         id="contacto"
-        class="doble__pantalla"
+        class="iframe"
         title="contacto"
         allowfullscreen
       ></iframe>
