--- a/secciones/bi/bi.html
+++ b/secciones/bi/bi.html
@@ -160,8 +160,6 @@
         class="contenedor__bi contenido__bi__9"
       >
         <div class="bi__elemento">
-          <button id="generate-stats">Generar Estadísticas</button>
-          <br />
           <div class="contenedor__flex">
             <div class="chart-container">
               <canvas id="chart2"></canvas>
@@ -184,7 +182,7 @@
               </tbody>
             </table>
           </div>
-          <div class="contenedor__Estadisticas_predicciones">
+          <div class="bi__elemento contenedor__Estadisticas_predicciones">
             <h2 class="subtitulo">Predicciones para los Próximos Dos Días</h2>
             <p>
               Nota: Estas predicciones son estimaciones realizadas por
