--- a/secciones/inicio/inicio.html
+++ b/secciones/inicio/inicio.html
@@ -8,6 +8,7 @@
     align-items: center;
     background: url("../../logo.png") no-repeat center center fixed;
     background-size: 99%;
+    background
   }
   .letra-grande {
     font-size: 1em;
@@ -38,11 +39,13 @@
     </a>
   </div>
 
-  <div class="texto__animado__zoom">
+  <div class="texto__animado__zoom margen__mediano">
     <span>A</span>pasionado por la <span>T</span>ecnología>
   </div>
 
-  <div class="contenedor_letra">
-    <div class="letra-grande">Inicio</div>
+  <div class="contenedor_letra margen__grande">
+    <div class="letra-grande">
+      Doy Soluciones faciles a problemas complejos...
+    </div>
   </div>
 </section>
