--- a/secciones/sobre_mi/sobre_mi.html
+++ b/secciones/sobre_mi/sobre_mi.html
@@ -11,18 +11,18 @@
       <span>S</span>oy <span>C</span>arlos <span>M</span>ario
       <span>R</span>ivera<span>&nbsp;&frasl;&gt;</span>
     </h2>
-    <p>
+    <p class="margen__mediano">
       <strong class="texto__3d">Desarrollador de software</strong>
       Con más de 12 años de experiencia, apasionado por la creación de
       aplicaciones robustas y escalables, he trabajado en proyectos desde la
       etapa de diseño hasta la implementación de soluciones.
     </p>
-    <p>
+    <p class="margen__mediano">
       <strong class="texto__3d">Como Ingeniero de datos,</strong>
       mi objetivo es crear soluciones eficientes que mejoren la experiencia del
       usuario.
     </p>
-    <p class="texto_justificado">
+    <p class="margen__mediano">
       <strong class="texto__3d">Un Arquitecto de soluciones, </strong>
       con experiencia en diseño, implementación y optimización de
       infraestructuras en la nube.
