--- a/secciones/proyectos/proyectos.html
+++ b/secciones/proyectos/proyectos.html
@@ -11,168 +11,176 @@
   </head>
   <body>
     <h2>
-      <strong class="subtitulo"><span>P</span>royectos</strong>
+      <strong class="subtitulo"><span>P</span>royectos </strong>
     </h2>
-    <br />
-    <strong
-      ><span>L</span>ogros <span>D</span>estacados en
-      <span>P</span>royectos</strong
-    >
+    <h2>
+      <strong class="subtitulo"
+        ><span>L</span>ogros <span>D</span>estacados en
+        <span>P</span>royectos</strong
+      >
+    </h2>
 
-    <!-- KPIs y Logros Destacados -->
-    <!-- KPIs y Logros Destacados -->
-    <div class="contenedor__flex__proyectos">
-      <div class="tarjeta__kpi__icon gradiente__frio">
-        <i class="material-icons gradiente__frio" style="font-size: 48px"
-          >badge</i
-        >
+    <div class="contenedor__flex__columna">
+      <!-- KPIs y Logros Destacados -->
+      <div class="contenedor__flex__proyectos texto">
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value holograma">95%</h3>
 
-        <div class="tarjeta__kpi__data holograma">
-          <h3 class="tarjeta_kpi__value">95%</h3>
-          <p class="tarjeta__tarjeta__kpi">
-            Reducción en el tamaño de documentos electrónicos
-          </p>
-        </div>
-      </div>
-
-      <div class="tarjeta__kpi_proyecos">
-        <div class="tarjeta__kpi__icon gradiente__frio">
-          <i class="material-icons" style="font-size: 48px"
-            >supervisor_account</i
-          >
-        </div>
-        <div class="tarjeta__kpi__data holograma">
-          <h3 class="tarjeta_kpi__value">ISO 27001</h3>
-          <p class="tarjeta__tarjeta__kpi">
-            Certificación en normas de seguridad
-          </p>
-        </div>
-      </div>
-
-      <div class="tarjeta__kpi_proyecos">
-        <div class="tarjeta__kpi__icon gradiente__frio">
-          <i class="material-icons" style="font-size: 48px">timer_10</i>
-        </div>
-        <div class="tarjeta__kpi__data holograma">
-          <h3 class="tarjeta_kpi__value">Top 10</h3>
-          <p class="tarjeta__tarjeta__kpi">
-            Proveedores tecnológicos con más documentos emitidos
-          </p>
-        </div>
-      </div>
-
-      <div class="tarjeta__kpi_proyecos">
-        <div class="tarjeta__kpi__icon gradiente__frio">
-          <i class="material-icons" style="font-size: 48px">construction</i>
-        </div>
-        <div class="tarjeta__kpi__data holograma">
-          <h3 class="tarjeta_kpi__value">Optimización</h3>
-          <p class="tarjeta__tarjeta__kpi">
-            Mejora en emisión de documentos electrónicos
-          </p>
-        </div>
-      </div>
-
-      <div class="tarjeta__kpi_proyecos">
-        <div class="tarjeta__kpi__icon gradiente__frio">
-          <i class="material-icons" style="font-size: 48px">monetization_on</i>
-        </div>
-        <div class="tarjeta__kpi__data holograma">
-          <h3 class="tarjeta_kpi__value">Análisis de Precios del Dólar</h3>
-          <p class="tarjeta__tarjeta__kpi">
-            Desarrollo de un sistema para predecir precios históricos del dólar
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="contenedor__proyectos">
-      <div class="proyectos__grid">
-        <div class="proyecto">
-          <h2 class="proyecto__title subtitulo">
-            <span>F</span>acturación <span>E</span>lectrónica
-          </h2>
-          <img
-            src="../../images/proyectos/fe.jpeg"
-            alt="Proceso de Facturación Electrónica"
-            class="proyecto__img"
-            loading="lazy"
-          />
-          <div class="proyecto__content">
-            <div id="description1" class="proyecto__description collapsed">
-              <p>
-                <span>I</span>mplementé sistemas de facturación electrónica para
-                la emisión, recepción y procesamiento de facturas electrónicas.
-                Este proyecto mejora la eficiencia y la transparencia en las
-                transacciones comerciales.
-              </p>
-              <ul>
-                <li>
-                  <span>D</span>esarrollé interfaces de usuario intuitivas y
-                  responsivas.
-                </li>
-                <li>
-                  <span>I</span>ntegré sistemas de validación y seguridad de
-                  datos.
-                </li>
-                <p>
-                  <strong> <span>T</span>ecnologías:</strong> HTML, CSS,
-                  JavaScript
-                </p>
-              </ul>
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon gradiente__frio">
+              <i class="material-icons">badge</i>
             </div>
-            <div
-              class="toggle-button"
-              onclick="toggleDescription('description1')"
-            >
-              Mostrar más
+            <div class="tarjeta__kpi_proyecos__detalles">
+              Reducción en el tamaño de documentos electrónicos
             </div>
           </div>
         </div>
 
-        <div class="proyecto">
-          <h2 class="proyecto__title subtitulo">
-            <span>P</span>recios <span>H</span>istóricos del <span>D</span>ólar
-          </h2>
-          <img
-            src="../../images/proyectos/dolar.jpeg"
-            alt="Análisis de Precios del Dólar"
-            class="proyecto__img"
-            loading="lazy"
-          />
-          <div class="proyecto__content">
-            <div id="description2" class="proyecto__description collapsed">
-              <p>
-                <span>D</span>esarrollé un sistema para analizar y predecir los
-                precios históricos del dólar en Colombia utilizando inteligencia
-                artificial y herramientas de Business Intelligence.
-              </p>
-              <ul>
-                <li><span>I</span>mplementación de dashboards interactivos.</li>
-                <li>
-                  <span>U</span>so de modelos de IA para predicciones precisas.
-                </li>
-                <p>
-                  <strong> <span>T</span>ecnologías:</strong>
-                  <span class="icono__javascript"></span>, AWS QuickSight,
-                  <span class="icono__python"></span>, IA, API
-                  <a href="#bi" class="link" target="_blank" rel="noopener"
-                    >Ver más</a
-                  >
-                </p>
-              </ul>
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value holograma">ISO 27001</h3>
+
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon">
+              <i class="material-icons icono__ajustado">supervisor_account</i>
             </div>
-            <div
-              class="toggle-button"
-              onclick="toggleDescription('description2')"
-            >
-              Mostrar más
+
+            <p class="tarjeta__kpi_proyecos__detalles">
+              Certificación en normas de seguridad
+            </p>
+          </div>
+        </div>
+
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value holograma">Top 10</h3>
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon">
+              <i class="material-icons icono__ajustado">timer_10</i>
+            </div>
+
+            <p class="tarjeta__kpi_proyecos__detalles">
+              Proveedores tecnológicos con más documentos emitidos
+            </p>
+          </div>
+        </div>
+
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value holograma">Optimización</h3>
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon">
+              <i class="material-icons icono__ajustado">construction</i>
+            </div>
+            <p class="tarjeta__kpi_proyecos__detalles">
+              Mejora en emisión de documentos electrónicos
+            </p>
+          </div>
+        </div>
+
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value holograma">Precios del Dólar</h3>
+
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon">
+              <i class="material-icons icono__ajustado">monetization_on</i>
+            </div>
+            <p class="tarjeta__kpi_proyecos__detalles">
+              Sistema para predecir precios del dólar
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="contenedor__proyectos">
+        <div class="proyectos__grid">
+          <div class="proyecto">
+            <h2 class="proyecto__title subtitulo">
+              <span>F</span>acturación <span>E</span>lectrónica
+            </h2>
+            <img
+              src="../../images/proyectos/fe.jpeg"
+              alt="Proceso de Facturación Electrónica"
+              class="proyecto__img"
+              loading="lazy"
+            />
+            <div class="proyecto__content">
+              <div id="description1" class="proyecto__description collapsed">
+                <p>
+                  <span>I</span>mplementé sistemas de facturación electrónica
+                  para la emisión, recepción y procesamiento de facturas
+                  electrónicas. Este proyecto mejora la eficiencia y la
+                  transparencia en las transacciones comerciales.
+                </p>
+                <ul>
+                  <li>
+                    <span>D</span>esarrollé interfaces de usuario intuitivas y
+                    responsivas.
+                  </li>
+                  <li>
+                    <span>I</span>ntegré sistemas de validación y seguridad de
+                    datos.
+                  </li>
+                  <p>
+                    <strong> <span>T</span>ecnologías:</strong> HTML, CSS,
+                    JavaScript
+                  </p>
+                </ul>
+              </div>
+              <div
+                class="toggle-button"
+                onclick="toggleDescription('description1')"
+              >
+                Mostrar más
+              </div>
+            </div>
+          </div>
+
+          <div class="proyecto">
+            <h2 class="proyecto__title subtitulo">
+              <span>P</span>recios <span>H</span>istóricos del
+              <span>D</span>ólar
+            </h2>
+            <img
+              src="../../images/proyectos/dolar.jpeg"
+              alt="Análisis de Precios del Dólar"
+              class="proyecto__img"
+              loading="lazy"
+            />
+            <div class="proyecto__content">
+              <div id="description2" class="proyecto__description collapsed">
+                <p>
+                  <span>D</span>esarrollé un sistema para analizar y predecir
+                  los precios históricos del dólar en Colombia utilizando
+                  inteligencia artificial y herramientas de Business
+                  Intelligence.
+                </p>
+                <ul>
+                  <li>
+                    <span>I</span>mplementación de dashboards interactivos.
+                  </li>
+                  <li>
+                    <span>U</span>so de modelos de IA para predicciones
+                    precisas.
+                  </li>
+                  <p>
+                    <strong> <span>T</span>ecnologías:</strong>
+                    <span class="icono__javascript"></span>, AWS QuickSight,
+                    <span class="icono__python"></span>, IA, API
+                    <a href="#bi" class="link" target="_blank" rel="noopener"
+                      >Ver más</a
+                    >
+                  </p>
+                </ul>
+              </div>
+              <div
+                class="toggle-button"
+                onclick="toggleDescription('description2')"
+              >
+                Mostrar más
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <script>
       function toggleDescription(id) {
         const description = document.getElementById(id);
