--- a/secciones/contacto/contacto.html
+++ b/secciones/contacto/contacto.html
@@ -50,7 +50,7 @@
   </div>
 
   <!-- Icono de Copiar -->
-  <div class="icon-button" id="copyEmailIcon">
+  <div class="icon-button" id="copyEmailButton">
     <i class="material-icons">content_copy</i>
     <div class="tooltip">Copiar Email</div>
   </div>
