--- a/secciones/contacto/contacto.html
+++ b/secciones/contacto/contacto.html
@@ -19,6 +19,9 @@
       <h2 class="subtitulo"><strong><span>L</span>inks<span>Ú</span>tiles</strong></h2>
       <ul>
         <li>
+          <a href="../../assets/apps/sara/sara.HTML" target="_blank" class="enlace__desplazamiento--fondo">Juego de Sarita</a>
+        </li>
+        <li>
           <a href="../../assets/apps/focus_riveradev/focus_riveradev.html" target="_blank" class="enlace__desplazamiento--fondo">Aplicación Pomodoro</a>
         </li>
       </ul>
@@ -50,9 +53,10 @@
   </div>
 
   <!-- Icono de Copiar -->
-  <div class="icon-button" id="copyEmailButton">
+  <div class="icon-button" >
     <i class="material-icons">content_copy</i>
-    <div class="tooltip">Copiar Email</div>
+
+    <div class="tooltip" id="copyEmailButton">Copiar Email</div>
   </div>
 
 </div>
