--- a/secciones/bi/bi.html
+++ b/secciones/bi/bi.html
@@ -154,7 +154,7 @@
         class="contenedor__bi contenido__bi__9"
       >
         <div class="bi__elemento">
-          <div class="contenedor__flex">
+          <div class="contenedor__flex__separado">
             <div class="chart-container">
               <canvas id="chart2"></canvas>
             </div>
