--- a/secciones/habilidades/habilidades.html
+++ b/secciones/habilidades/habilidades.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="../../estilos/general.css" />
 <link rel="stylesheet" href="./habilidades.css" />
 
-<div class="other-skills contenedor texto">
+<div class="contenedor">
   <div class="contenedor__medio contenedor__padd">
     <div class="subbtitulo__derecho">
       <div class="headin">
@@ -13,42 +13,77 @@
       </div>
     </div>
 
-    <ul class="other-skills-list contenedor__aumentotamano">
-      <!-- Lista de otras habilidades -->
+    <ul class="contenedor__grid_2">
+      <!-- Habilidad 1 -->
+      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
+        <article class="habilidades__icono">
+          <div class="habilidades__contenido">
+            <div class="habilidades__titulo">
+              <span class="material-icons habilidades__imagen">code</span>
+              <h2 class="habilidades__subtitulo">
+                <strong>Desarrollo de Software:</strong>
+              </h2>
+            </div>
+            <div class="habilidades__linea"></div>
+            <p class="habilidades__descripcion texto">
+              .NET(C#, VB), Versionamiento en GitHub, SubVersion.
+            </p>
+          </div>
+        </article>
+      </li>
 
-      <li class="other-skills-item">
-        <ion-icon
-          class="other-skills-icon"
-          name="chevron-forward-outline"
-        ></ion-icon>
-        <p>
-          <strong>Desarrollo de Software:</strong>
-          .NET(C#,VB), Versionamiento en GitHub, SubVersion.
-        </p>
+      <!-- Habilidad 2 -->
+      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
+        <article class="habilidades__icono">
+          <div class="habilidades__contenido">
+            <div class="habilidades__titulo">
+              <span class="material-icons habilidades__imagen"
+                >integration_instructions</span
+              >
+              <h2 class="habilidades__subtitulo">
+                <strong>Interoperatividad:</strong>
+              </h2>
+            </div>
+            <div class="habilidades__linea"></div>
+            <p class="habilidades__descripcion texto">
+              Web Services - SOAP - API Rest. Postman.
+            </p>
+          </div>
+        </article>
       </li>
-      <li class="other-skills-item">
-        <ion-icon
-          class="other-skills-icon"
-          name="chevron-forward-outline"
-        ></ion-icon>
-        <p>
-          <strong>Interoperatividad:</strong> Web Services - SOAP - API Rest.
-          Postman.
-        </p>
+
+      <!-- Habilidad 3 -->
+      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
+        <article class="habilidades__icono">
+          <div class="habilidades__contenido">
+            <div class="habilidades__titulo">
+              <span class="material-icons habilidades__imagen">group_work</span>
+              <h2 class="habilidades__subtitulo">
+                <strong>Metodologías ágiles:</strong>
+              </h2>
+            </div>
+            <div class="habilidades__linea"></div>
+            <p class="habilidades__descripcion texto">SCRUM, DevOps.</p>
+          </div>
+        </article>
       </li>
-      <li class="other-skills-item">
-        <ion-icon
-          class="other-skills-icon"
-          name="chevron-forward-outline"
-        ></ion-icon>
-        <p><strong>Metodologías ágiles:</strong> SCRUM, DevOps.</p>
-      </li>
-      <li class="other-skills-item">
-        <ion-icon
-          class="other-skills-icon"
-          name="chevron-forward-outline"
-        ></ion-icon>
-        <p><strong>Facturación electronica:</strong> UBL, XML, JSON.</p>
+
+      <!-- Habilidad 4 -->
+      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
+        <article class="habilidades__icono">
+          <div class="habilidades__contenido">
+            <div class="habilidades__titulo">
+              <span class="material-icons habilidades__imagen"
+                >receipt_long</span
+              >
+              <h2 class="habilidades__subtitulo">
+                <strong>Facturación electrónica:</strong>
+              </h2>
+            </div>
+            <div class="habilidades__linea"></div>
+            <p class="habilidades__descripcion texto">UBL, XML, JSON.</p>
+          </div>
+        </article>
       </li>
     </ul>
   </div>
