--- a/secciones/inicio/inicio.html
+++ b/secciones/inicio/inicio.html
@@ -1,34 +1,12 @@
 <link rel="stylesheet" href="../../estilos/estilo.css" />
-<style>
-  .contenedor_letra {
-    padding: 0;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url("../../logo.png") no-repeat center center fixed;
-    background-size: 99%;
-    background
-  }
-  .letra-grande {
-    font-size: 1em;
-    font-weight: bold;
-    color: transparent;
-    background: url("../../images/logo.png") no-repeat center center;
-    background-size: 80%;
-    -webkit-background-clip: text;
-    background-clip: text;
-  }
-</style>
 
 <section class="contenedor__flex__columna" id="inicio">
-  <div class="nombre inicio__titulo">
-    <h1 class="parte1">
-      <span>C</span>arlos<span>M</span>ario<span class="parte2">R</span
-      >ivera.com
-    </h1>
+  <div class="nombre">
+    <div class="titulo inicio__titulo">
+      <strong class="parte1"><span>C</span>arlos<span>M</span>ario</strong>
+      <strong class="parte2"><span>R</span>ivera.com</strong>
+    </div>
   </div>
-
   <div class="texto efectos__combinados">
     <h5><span>A</span>nálisis de <span>D</span>atos <span>A</span>vanzados</h5>
     <h6><span>D</span>esarrollador de <span>S</span>oftware</h6>
