--- a/secciones/proyectos/proyectos.html
+++ b/secciones/proyectos/proyectos.html
@@ -10,22 +10,19 @@
     <link rel="stylesheet" href="./proyectos.css" />
   </head>
   <body>
-    <h2>
-      <strong class="subtitulo"><span>P</span>royectos </strong>
-    </h2>
-    <h2>
-      <strong class="subtitulo"
+    <h2 class="subtitulo texto__centrado"><span>P</span>royectos</h2>
+    <h3>
+      <strong class=""
         ><span>L</span>ogros <span>D</span>estacados en
         <span>P</span>royectos</strong
       >
-    </h2>
+    </h3>
 
     <div class="contenedor__flex__columna">
       <!-- KPIs y Logros Destacados -->
       <div class="contenedor__flex__proyectos texto">
         <div class="tarjeta__kpi_proyecos">
           <h3 class="tarjeta_kpi__value holograma">95%</h3>
-
           <div class="tarjeta__kpi__data gradiente__frio">
             <div class="tarjeta__kpi__icon gradiente__frio">
               <i class="material-icons">badge</i>
@@ -37,8 +34,6 @@
         </div>
 
         <div class="tarjeta__kpi_proyecos">
-          <h3 class="tarjeta_kpi__value holograma">ISO 27001</h3>
-
           <div class="tarjeta__kpi__data gradiente__frio">
             <div class="tarjeta__kpi__icon">
               <i class="material-icons icono__ajustado">supervisor_account</i>
@@ -48,6 +43,7 @@
               Certificación en normas de seguridad
             </p>
           </div>
+          <h3 class="tarjeta_kpi__value holograma">ISO 27001</h3>
         </div>
 
         <div class="tarjeta__kpi_proyecos">
@@ -64,7 +60,6 @@
         </div>
 
         <div class="tarjeta__kpi_proyecos">
-          <h3 class="tarjeta_kpi__value holograma">Optimización</h3>
           <div class="tarjeta__kpi__data gradiente__frio">
             <div class="tarjeta__kpi__icon">
               <i class="material-icons icono__ajustado">construction</i>
@@ -73,6 +68,7 @@
               Mejora en emisión de documentos electrónicos
             </p>
           </div>
+          <h3 class="tarjeta_kpi__value holograma">Optimización</h3>
         </div>
 
         <div class="tarjeta__kpi_proyecos">
