--- a/html/laboratorio/animaciones_texto copy.HTML
+++ b/html/laboratorio/animaciones_texto copy.HTML
@@ -113,7 +113,7 @@
           <div class="text texto__5">riveradev</div>
           <div class="text texto__6">riveradev</div>
           <div class="text texto__7">riveradev</div>
-          <div class="text texto__8">riveradev</div>
+          <div class="text texto__8">sara</div>
           <div class="text texto__9">riveradev</div>
           <div class="text texto__10">riveradev</div>
           <div class="text texto__11">riveradev</div>
