--- a/assets/apps/sara/sara.HTML
+++ b/assets/apps/sara/sara.HTML
@@ -142,133 +142,217 @@
       </nav>
     </header>
 
-    <div class="contenedor__flex__columna" id="tablero">
-      <div class="estadisticas">
-        <p>Saras restantes: <span id="divs-restantes">10</span></p>
-        <p>Saras capturadas: <span id="divs-capturados">0</span></p>
-        <p>Tiempo restante: <span id="tiempo-restante">2:00</span></p>
-      </div>
-
+    <div id="tablero">
       <div
         class="tablero__contenedor__sarita gradiente__verde__opaco"
         id="game-board"
       >
-        <div class="text texto__1">
+        <div class="texto texto__1">
           Amalia
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego Amalia carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__2">Amalia</div>
-        <div class="text texto__3">
-          Amalia
+        <div class="texto texto__1">
+          cata
+          <img
+            src="./imagenes/fresa.png"
+            alt="fresa sarita juego caata carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__22">
+          Sofi
+          <img
+            src="./imagenes/fresa_gano.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__1">
+          cata
+          <img
+            src="./imagenes/fresa.png"
+            alt="fresa sarita juego caata carlosmariorivera.com "
+          />
+        </div>
+
+        <div class="texto texto__12">
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego Amalia carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__9">a</div>
-        <div class="text texto__10">m</div>
-        <div class="text texto__11">a</div>
-        <div class="text texto__12">
-          l
-          <img
-            src="./imagenes/fresa_sarita.png"
-            alt="fresa sarita juego Amalia carlosmariorivera.com "
-          />
-        </div>
-        <div class="text texto__1">
-          i
+        <div class="texto texto__1">
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego sofi carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__13">a</div>
-        <div class="text texto__14">Amalia</div>
-        <div class="text texto__15">caata</div>
-        <div class="text texto__16">caata</div>
-        <div class="text texto__17">Amalia</div>
-        <div class="text texto__18">
+        <div class="texto texto__22">
+          Sofi
+          <img
+            src="./imagenes/fresa_gano.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__1">
+          cata
+          <img
+            src="./imagenes/fresa.png"
+            alt="fresa sarita juego caata carlosmariorivera.com "
+          />
+        </div>
+        <!-- <div class="texto texto__3">
           Amalia
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego Amalia carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__19">Amalia</div>
-        <div class="text texto__20">Amalia</div>
+  
+        <div class="texto texto__18">
+          Amalia
+          <img
+            src="./imagenes/fresa_sarita.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__1">Amalia</div>
+        <div class="texto texto__1">
+          <img
+            src="./imagenes/fresa_gano.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />cata
+        </div>
 
-        <div class="text texto__22">Amalia</div>
-        <div class="text texto__23">Amalia</div>
-        <div class="text texto__1">
+        <div class="texto texto__22">
+          Sofi
+          <img
+            src="./imagenes/fresa_gano.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__1">
+          CATA
+          <img
+            src="./imagenes/fresa.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />cata
+        </div>
+        <div class="texto texto__1">
           Amalia
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego Amalia carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__25">caata</div>
-        <div class="text texto__26">caata</div>
-        <div class="text texto__27">caata</div>
-        <div class="text texto__1">
+        <div class="texto texto__1">
+          <img
+            src="./imagenes/fresa_gano.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />cata
+        </div>
+        <div class="texto texto__55">
+          SOFIA
+          <img
+            src="./imagenes/fresa_gano.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />cata
+        </div> -->
+        <div class="texto texto__1">
+          cata
+          <img
+            src="./imagenes/fresa.png"
+            alt="fresa sarita juego caata carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__22">
+          Sofi
+          <img
+            src="./imagenes/fresa_gano.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__33">
           Amalia
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego caata carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__1">
+        <div class="texto texto__55">
           Amalia
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego caata carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__28">caata</div>
-        <div class="text texto__29">caata</div>
-        <div class="text texto__30">caata</div>
-        <div class="text texto__88">
+        <div class="texto texto__8">
+          <img
+            src="./imagenes/fresa_gano.png"
+            alt="fresa sarita juego Amalia carlosmariorivera.com "
+          />cata
+        </div>
+        <div class="texto texto__1">
+          cata
+          <img
+            src="./imagenes/fresa.png"
+            alt="fresa sarita juego caata carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__1">
+          cata
+          <img
+            src="./imagenes/fresa.png"
+            alt="fresa sarita juego caata carlosmariorivera.com "
+          />
+        </div>
+        <div class="texto texto__19">
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego caata carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__89">
+        <div class="texto texto__50">
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego caata carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__90">
+        <div class="texto texto__90">
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego Amalia carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__91">
+        <div class="texto texto__25">
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego Amalia carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__92">
+        <div class="texto texto__29">
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego Amalia carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__93">
+        <div class="texto texto__44">
           <img
             src="./imagenes/fresa_sarita.png"
             alt="fresa sarita juego caata carlosmariorivera.com "
           />
         </div>
-        <div class="text texto__100">caata</div>
+        <div class="texto texto__44">
+          cata
+          <img.
+            src="./imagenes/fresa.png"
+            alt="fresa sarita juego caata carlosmariorivera.com "
+          />
+        </div>
 
-        <div class="text texto__94">Sara</div>
-        <div class="text texto__1">
+        <div class="texto texto__94">Sara</div>
+        <div class="texto texto__1">
           Amalia
           <img
             src="./imagenes/fresa_sarita.png"
@@ -278,6 +362,12 @@
       </div>
       <script src="./juego.js"></script>
       <!-- Aquí podrías añadir más contenido si lo necesitas -->
+    </div>
+    <hr />
+    <div class="estadisticas">
+      <p>Saras restantes: <span id="divs-restantes">10</span></p>
+      <p>Saras capturadas: <span id="divs-capturados">0</span></p>
+      <p>Tiempo restante: <span id="tiempo-restante">2:00</span></p>
     </div>
     <p id="message" class="holograma__rojo"></p>
 
@@ -297,7 +387,7 @@
 
     <script>
       // Obtener todos los elementos de texto
-      const texts = document.querySelectorAll(".text");
+      const texts = document.querySelectorAll(".texto");
       let capturedCount = 0;
       let divsRestantes = texts.length;
       let timer;
@@ -330,7 +420,7 @@
         if (divsRestantes === 0) {
           clearInterval(timer); // Detener el temporizador
           document.getElementById("message").innerText =
-            "¡Felicidades! Has capturado todos los textos. Tio Mario te ama. :)";
+            "¡Felicidades! Has Ganado. Tio Mario te ama. :)";
           return;
         }
 
